# prime-numbers-calculator

./: .gitignore  CMakeLists.txt  README.md  file.xml  main.cpp
src/: CMakeLists.txt  application.cpp  calc_prime_th.cpp  utils.cpp  xml_node.cpp  xml_parser.cpp
src/include/: application.hpp  calc_prime_th.hpp  defines.h  utils.h  xml_node.hpp  xml_parser.hpp
tests/: CMakeLists.txt
tests/test/parcer/: CMakeLists.txt  test_02.xml  test_03.xml  test_04.xml  test_05.xml  test_06.xml  test_07.xml  test_08.xml  test_09.xml  test_parcer.cpp
